trunk/Archive2/62/dff59863823d32/output
main.cpp:30:6: error: use of undeclared identifier 'get'
    &get<0>(t);
     ^
1 error generated.
